--- a/frontend/pages/logged/profile.html
+++ b/frontend/pages/logged/profile.html
@@ -38,24 +38,24 @@
         </div>
         <input id="action" type="hidden" value="updateUserData">
         <div class="row">
-            <button class="btn right">Salvar</button>
+            <button class="btn right" onclick="$('#userdata-form').submit();">Salvar</button>
         </div>
     </form>
 </div>
 
 <script>
     $(document).ready(function() {
-        $("#name").val(Evendas.loggedUser.name);
-        $("#email").val(Evendas.loggedUser.email);
-        $("#address").val(Evendas.userData.address);
-        $("#document").val(Evendas.userData.document);
-        $("#phone_number").val(Evendas.userData.phoneNumber);
-        
         Evendas.prepareForm("#userdata-form", function(success, data) {
             Evendas.loadUserData(function(userData) {
                 alert("Dados atualizados com sucesso!");
                 Evendas.loadPage("logged/profile.html");
             });
         });
+
+        $("#name").val(Evendas.loggedUser.name);
+        $("#email").val(Evendas.loggedUser.email);
+        $("#address").val(Evendas.userData.address);
+        $("#document").val(Evendas.userData.document);
+        $("#phone_number").val(Evendas.userData.phoneNumber);
     });
 </script>
